refactor: WebConfig 제외